Fixing the error where the page is not narrow enough if the text is too large.

--- a/static/styles.css
+++ b/static/styles.css
@@ -73,7 +73,7 @@ body ::selection {
 }
 }
 #alert-div{
-  margin-top: 180px;
+  margin-top: 80px;
   margin-bottom: 90px;
 
 }
